Fix the Add New Deployable form
There were some layout issues with the "Edit XML after saving". These were made
even worse under IE.

Additionally, colons are removed from the form labels (as is our de facto
standard).

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -3318,7 +3318,7 @@ body.administer form.generic{
   label{
     display: block;
     float: left;
-    width: 160px;
+    width: 180px;
     text-align: right;
     padding: 6px 7px 5px 0px;
     font-family: $label-font;
@@ -3356,6 +3356,7 @@ body.administer form.generic{
 
   span.text_instead_input{
     @include display_inline_block;
+    font-weight: bold;
     padding: 6px 0px;
   }
 
